--- a/UF1/s2m8uf104_facebook/s2m8uf0104_romero.html
+++ b/UF1/s2m8uf104_facebook/s2m8uf0104_romero.html
@@ -28,21 +28,56 @@
        </div>
 
        <div id="principal">
-         <div id="presentacion" class="esquerra estret">
-         </div>
 
-         <div id="amistad" class="esquerra">
-         </div>
+         <aside id="secciones">
+           <div id="presentacion" class="esquerra estret">
+             <h2>Presentación</h2>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+             <ul>
+               <li>Estudió en Esteve Terrades</li>
+               <li>Vive en Peñiscola</li>
+               <li>En una relación</li>
+             </ul>
 
-         <div id="fotos" class="esquerra">
-         </div>
+           </div>
 
-         <div id="sabias" class="esquerra">
-         </div>
+           <div id="amistad" class="esquerra">
+             <h2>Amigos</h2>
+             <ul>
+               <li>Aarón Garcia</li>
+               <li>Mario Muñoz</li>
+               <li>Steven Garzón</li>
+               <li>Nacho Prados</li>
+               <li>Oriol Paricio</li>
+               <li>Noelia Chia</li>
+               <li>Victor Herrero</li>
+               <li>Oriol Lopez</li>
+               <li></li>
+             </ul>
 
-         <div id="idioma" class="esquerra">
-         </div>
+           </div>
 
+           <div id="fotos" class="esquerra">
+           </div>
+
+           <div id="sabias" class="esquerra">
+           </div>
+
+           <div id="idioma" class="esquerra">
+           </div>
+        </aside>
+
+
+        <section id="seccion2">
+           <div id="pensando" class="dreta estret">
+           </div>
+
+           <div id="comentarios" class="dreta">
+           </div>
+
+           <div id="anuncio" class="dreta">
+           </div>
+       </section>
        </div>
      </div>
    </body>
