--- a/UF1/s2m8uf104_facebook/s2m8uf0104_romero.html
+++ b/UF1/s2m8uf104_facebook/s2m8uf0104_romero.html
@@ -34,7 +34,7 @@
              <h2>Presentación</h2>
              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
              <ul>
-               <li class="estudios">Estudió en Esteve Terrades</li>
+               <li class="estudios">Estudió en Cornella</li>
                <li class="domicilio">Vive en Peñiscola</li>
                <li class="situacion">En una relación</li>
                 <li class="amigos">9 Amigos</li>
@@ -148,7 +148,6 @@
             <h4 id="texto">Oriol Paricio > Yaiza Dos</h4>
             <h5 id="diamesany">31 de gener de 2019</h5>
           <img id="meme" src="img/meme_romero.gif">
-            <h6> A Aarón Garcia le gusta </h6>
             <ul>
               <li id="mg">Me gusta</li>
               <li id="com">Comenta</li>
@@ -160,8 +159,8 @@
              </input>
           </div>
 
-                      <div id="anuncio" class="dreta">
-                      </div>
+        <div id="anuncio" class="dreta">
+        </div>
        </section>
        </div>
      </div>
