--- a/UF1/s2m8uf104_facebook/s2m8uf0104_romero.html
+++ b/UF1/s2m8uf104_facebook/s2m8uf0104_romero.html
@@ -2,6 +2,7 @@
  <html lang="en" dir="ltr">
    <head>
      <meta charset="utf-8">
+     <meta name="viewport" content="width=deviece-width, inital-scale=1.0, user-scalable=no">
      <title>MyFacebook</title>
      <link rel="stylesheet" type="text/css" href="facebook_w.css" media="screen">
     <link rel="stylesheet" type="text/css" href="facebook_p.css" media="print">
