--- a/UF1/reproductor_romero/inicio.html
+++ b/UF1/reproductor_romero/inicio.html
@@ -13,8 +13,8 @@
     <meta name="viewport" content="width-devide-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estils.css">
-    <link rel="icon" sizes="192x192" href="img/backward.png">
-    <link rel="icon" sizes="512x512" href="img/backward.png">
+    <link rel="icon" sizes="192x192" href="img/icon.png">
+    <link rel="icon" sizes="512x512" href="img/icon.png">
     <link rel="apple-touch-icon" sizes="192x192" href="img/backward.png">
   </head>
   <script type="text/javascript" language="javascript">
